syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message RangeRequest {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message NumberResponse {
    int64 value = 1;
}

service NumberGeneratorService {
    rpc getNumbersInRange(RangeRequest) returns (stream NumberResponse);
}
